--- a/src/2.feladat.md
+++ b/src/2.feladat.md
@@ -52,6 +52,7 @@ Ehhez létrehozunk két tömböt:
 
 Egy `Random` osztályt fogunk használni, amivel véletlen számot generálunk.  
 A `rnd.Next(1, 7)` metódus mindig **1 és 6 közötti** egész számot ad vissza – pont úgy, ahogy egy dobókocka működik.
+Az rnd.Next függvény úgy működik, hogy a a bal oldalra írt értéket (1-est most) még beleveszi a random generálásba, de a jobb oldalon lévő számot (most 7-est) nem veszi bele. 
 
 > **C++ párhuzam:**  
 > C++-ban nincs beépített `Random` osztály, hanem `<random>` könyvtárat kell használni.  
@@ -98,7 +99,8 @@ Minden egyes lépésben:
 1. Generálunk egy számot 1 és 6 között.  
 2. Ezt eltároljuk a `dobasok` tömbben.  
 3. A `gyakorisag` tömb megfelelő elemét növeljük eggyel.  
-   - Például ha `4` jött ki, akkor a `gyakorisag[3]++` történik.  
+   - Például ha `4` jött ki, akkor a `gyakorisag[3]++` történik.
+   - A gyakoriság tömb 0-tól kezdődik, azaz az 1-es érték a 0-ba kerül be. Azért van -1 kivonás a `gyakorisag[dobasok[i] -1] ++;` sorban
 
 Ezáltal a ciklus végére lesz egy listánk az összes dobásról, és egy számlálónk, hogy az egyes oldalak hányszor jöttek ki.
 
