--- a/src/2.feladat.md
+++ b/src/2.feladat.md
@@ -212,15 +212,27 @@ namespace fa2
 ## 5. fejezet – Gyakoriságok kiírása
 ### Magyarázat
 
-Végül kiírjuk, hogy az **egyes számokból hányszor dobtunk.**
-Ehhez a `gyakorisag` tömböt végigjárjuk, és minden elemhez kiírjuk a megfelelő `enum` nevet is.
+A `$"..."` C#-ban **string-interpolációt** jelent. Lehetővé teszi, hogy a szöveg közé `{}` jelek között **változókat vagy kifejezéseket** illesszünk be.  
 
-Így a kimenet például lehet:
-```
-Egyes gyakorisága: 18
+Példa sor:
+
+``csharp
+Console.WriteLine($"{(Dobas)(i + 1)} gyakorisága: {gyakorisag[i]}");
+``
+
+- `(Dobas)(i + 1)` → az `i` indexből enum típus lesz (`Egyes`, `Kettes`, …).  
+- `gyakorisag[i]` → a tömb értéke, hányszor dobtuk az adott számot.  
+- A két `{}` közötti érték automatikusan beillesztődik a stringbe.  
+
+**Kimenet példa:**
+```Egyes gyakorisága: 18
 Kettes gyakorisága: 16
-...
+Hármas gyakorisága: 15
 ```
+
+> **C++ párhuzam:**  
+> C++-ban `std::cout`-tal lehet hasonló hatást elérni, de nincs beépített string-interpoláció.
+>
 
 > **C++ párhuzam:**
 > C++-ban ugyanígy kellene egy `for` ciklussal végigmenni a számlálótömbön, és `std::cout`-tal kiírni az eredményeket.
