--- a/src/1.feladat.md
+++ b/src/1.feladat.md
@@ -66,6 +66,25 @@ Mire figyelj:
 - Lehet, hogy a felhasználó semmit nem ír (üres string). Érdemes valós programban ellenőrizni (pl. `if (string.IsNullOrWhiteSpace(nev)) { ... }`), de itt csak bemutatjuk az alapműveletet.
 - Gyakorlás: próbáld ki beírni nevet, szóközöket is — `ReadLine()` megőrzi a szóközöket.
 
+### `Console.WriteLine` helyettesítő formátummal
+
+```csharp
+Console.WriteLine("Helló {0}!", nev); // visszaírja a nevet
+```
+
+- `"Helló {0}!"` a **formátumsztring**, ahol `{0}` **helyőrző**.  
+- A `nev` változó az **első argumentum** a `WriteLine`-nak a sztringben lévő `{0}` helyére kerül.  
+- Tehát ha `nev = "Anna"`, a konzolra ez íródik ki: `Helló Anna!`
+- Több helyőrző esetén `{1}`, `{2}`, … további argumentumokat jelölne.  
+- Ez a klasszikus C# string-formatálás, az interpolált string `$"..."` modernebb és olvashatóbb.
+
+> **C++ párhuzam:**  
+> - C++-ban hasonló hatást érünk el:  
+> ```
+> printf("Helló %s!\n", nev.c_str());
+> ```
+
+
 > **C# vs C++**
 > - C#: `Console.ReadLine()` — beolvassa a teljes sort stringként.  
 > - C++: `std::cin >> nev;` csak az első szóig olvas, szóköznál megáll — ha teljes sort akarsz, `std::getline(std::cin, nev);` a megoldás.
